# rfid-bestandsabgleich

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: main.yml  release.yml
documentation/: README.md  github.md  installation.md  structure.md
src/: App.tsx  Editor.tsx  EditorScreen.tsx  FileUploadScreen.tsx  Finished.tsx  ProcessingScreen.tsx  StartScreen.tsx  index.css  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: FileUploadDropzone.tsx  barcode_tab.tsx  download_tab.tsx  erp_tab.tsx  instructions_dialog.tsx  master_tab.tsx  rfid_tab.tsx  start_tab.tsx  upload_stepper.tsx
src/components/editor/: EditorHeader.tsx  EditorPage.tsx  Sidebar.tsx
src/components/editor/tables/: artNr_table.tsx  barcode_table.tsx  erp_table.tsx  lotid_table.tsx  rfid_table.tsx  scan_table.tsx
src/components/tables/: artNr_table.tsx  barcode_table.tsx  erp_table.tsx  lotid_table.tsx  rfid_table.tsx  scan_table.tsx
src/components/ui/: ErrorToast.tsx  FileUploadDropzone.tsx  RestartDialog.tsx  SuccessToast.tsx  UpdaterDialog.tsx  button.tsx  dialog.tsx  tabs.tsx
src/context/: ThemeContext.tsx
src/hooks/: ToastProvider.tsx
src/lib/: compare.js  compare.ts  download.ts  pdfCreator.js  pdfCreator.ts  readFiles.ts  utils.ts
